upgrade to JUNIT5 & and fix compilation warnings